[package]
name = "job_sched"
version = "0.0.1"
authors = ["fys <fys@greptime.com>"]
description = "A simple job scheduling libraray for rust"
repository = "https://github.com/Fengys123/job_sched"
edition = "2021"

[dependencies]
cron = "0.12"
chrono = "0.4"
tokio = { version = "1.22", features = ["full"] }
